fixed mobile width overflow of grid

--- a/style.css
+++ b/style.css
@@ -235,10 +235,11 @@ Animations
 
 	.grid {
 		grid-template-columns: auto auto;
+		width: 90%;
 	}
 
 	#operating-systems h2 {
-		font-size: 2.25em;
+		font-size: 2.23em;
 	}
 }
 
